--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo.Load_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo.Load_MT.adoc
@@ -16,7 +16,7 @@ public void Load(XmlReader reader)
 reader:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.xml.xmlreader.aspx[System.Xml.XmlReader]`
 +
-Данные можно получить методом IServerExtensionProxyService.GetAccessInfo
+Данные можно получить методом `IServerExtensionProxyService.GetAccessInfo`
 
 == Исключения
 
