--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo.Save_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo.Save_MT.adoc
@@ -28,4 +28,4 @@ writer:::
 
 == Заметки
 
-Метод сериализует списки операций и ролей в XmlWriter.
+Метод сериализует списки операций и ролей в `XmlWriter`.
