--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo_CL.adoc
@@ -17,7 +17,7 @@ public sealed class AccessInfo
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`xref:api/DocsVision/BackOffice/ObjectModel/AccessInfo_CT.adoc[AccessInfo()]` |Инициализирует новый экземпляр класса AccessInfo.
+|`xref:api/DocsVision/BackOffice/ObjectModel/AccessInfo_CT.adoc[AccessInfo()]` |Инициализирует новый экземпляр класса `AccessInfo`.
 |===
 
 == Свойства
@@ -40,7 +40,7 @@ public sealed class AccessInfo
 
 == Примеры
 
-Ниже приведен пример вывода в консоль информации по доступности операций документа с идентификатором 00000000-0000-0000-0000-000000000000
+Ниже приведен пример вывода в консоль информации по доступности операций документа с идентификатором `00000000-0000-0000-0000-000000000000`.
 
 [source,csharp]
 ----
