--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo_CT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/AccessInfo_CT.adoc
@@ -1,6 +1,6 @@
 = AccessInfo -- конструктор
 
-Инициализирует новый экземпляр класса AccessInfo.
+Инициализирует новый экземпляр класса `AccessInfo`.
 
 * *Пространство имён:* `xref:api/DocsVision/Platform/ObjectModel/ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
