--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BackOffice_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BackOffice_CL.adoc
@@ -1,6 +1,6 @@
 = BackOffice -- класс
 
-Предоставляет статические методы для получения ссылок на основные справочники BackOffice.
+Предоставляет статические методы для получения ссылок на основные справочники `BackOffice`.
 
 * *Пространство имён:* `xref:api/DocsVision/Platform/ObjectModel/ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
