--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInBranch_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInBranch_CL.adoc
@@ -37,4 +37,4 @@ public sealed class BuiltInBranch
 
 == Заметки
 
-В классе BuiltInBranch используется статический список для хранения зарегистрированных переходов состояний, и последующего обращения к ним. Количество зарегистрированных переходов состояний ограничено и составляет 65535.
+В классе `BuiltInBranch` используется статический список для хранения зарегистрированных переходов состояний, и последующего обращения к ним. Количество зарегистрированных переходов состояний ограничено и составляет `65535`.
