--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInOperation_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInOperation_CL.adoc
@@ -30,10 +30,10 @@ public sealed class BuiltInOperation
 |===
 |Имя |Описание
 |`Register(Dictionary<Int32, String>, Guid, Guid)` |Регистрирует операцию в коллекции. CardEditModeOnly устанавливается в true.
-|`Register(Dictionary<Int32, String>, Guid, Guid, Boolean)` |Регистрирует операцию в коллекции и позволяет задать значение CardEditModeOnly.
+|`Register(Dictionary<Int32, String>, Guid, Guid, Boolean)` |Регистрирует операцию в коллекции и позволяет задать значение `CardEditModeOnly`.
 |`ToString` |Возвращает название или локализованное название операции.
 |===
 
 == Заметки
 
-В классе BuiltInOperation используется статический список для хранения зарегистрированных операций, и последующего обращения к ним. Количество зарегистрированных операций ограничено и составляет 65535.
+В классе `BuiltInOperation` используется статический список для хранения зарегистрированных операций, и последующего обращения к ним. Количество зарегистрированных операций ограничено и составляет `65535`.
