--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInState_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BuiltInState_CL.adoc
@@ -36,4 +36,4 @@ public sealed class BuiltInState
 
 == Заметки
 
-В классе BuiltInState используется статический список для хранения зарегистрированных состояний, и последующего обращения к ним. Количество зарегистрированных состояний ограничено и составляет 65535.
+В классе `BuiltInState` используется статический список для хранения зарегистрированных состояний, и последующего обращения к ним. Количество зарегистрированных состояний ограничено и составляет `65535`.
