--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Document_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Document_CL.adoc
@@ -1,6 +1,6 @@
 = Document -- класс
 
-Объектная модель карточки Документ#.
+Объектная модель карточки Документ.
 
 * *Пространство имён:* `xref:api/DocsVision/Platform/ObjectModel/ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -90,7 +90,7 @@ objectContext.SaveObject<Document>(document); <.>
 <.> Получение сервисов.
 <.> Получение вида документа.
 <.> Создание документа.
-<.> генерация дайджеста.
+<.> Генерация дайджеста.
 <.> Получение правила нумерации.
 <.> Выделение номера для документа и установка даты регистрации документа.
 <.> Сохранение изменений.
