--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Kinds.CardTypes_PR.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Kinds.CardTypes_PR.adoc
@@ -15,4 +15,4 @@ public ObjectCollection<KindsCardType> CardTypes { get; }
 Значение свойства::
 Тип: `xref:api/DocsVision/Platform/ObjectModel/ObjectCollection_CL.adoc[ObjectCollection]<KindsCardType>`
 +
-Коллекция типов карточек `xref:api/DocsVision/BackOffice/ObjectModel/KindsCardType_CL.adoc[KindsCardType]` из Справочнике _Справочнике видов карточек_
+Коллекция типов карточек `xref:api/DocsVision/BackOffice/ObjectModel/KindsCardType_CL.adoc[KindsCardType]` из _Справочнике видов карточек_
