--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/KindsCardExtendedSettingGroupCollection_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/KindsCardExtendedSettingGroupCollection_CL.adoc
@@ -18,7 +18,7 @@ public class KindsCardExtendedSettingGroupCollection : ObjectCollection<KindsCar
 |===
 |Имя |Описание
 |`KindsCardExtendedSettingGroupCollection()` |Инициализирует новый экземпляр класса KindsCardExtendedSettingGroupCollection.
-|`KindsCardExtendedSettingGroupCollection(ObjectCollectionInitializationData)` |Инициализирует новый экземпляр класса KindsCardExtendedSettingGroupCollection с передачей метода получения данных.
+|`KindsCardExtendedSettingGroupCollection(ObjectCollectionInitializationData)` |Инициализирует новый экземпляр класса `KindsCardExtendedSettingGroupCollection` с передачей метода получения данных.
 |===
 
 == Методы
