--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/LayoutsProperty_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/LayoutsProperty_CL.adoc
@@ -60,4 +60,4 @@ public class LayoutsProperty : ObjectBase
 
 == Заметки
 
-Свойства класса LayoutsProperty отражают некоторые свойства элементов управления разметки карточки.
+Свойства класса `LayoutsProperty` отражают некоторые свойства элементов управления разметки карточки.
