--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/NumerationRulesRuleItemCondition_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/NumerationRulesRuleItemCondition_CL.adoc
@@ -17,7 +17,7 @@ public class NumerationRulesRuleItemCondition : ObjectBase
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`NumerationRulesRuleItemCondition()` |Инициализирует экземпляр класса NumerationRulesRuleItemCondition.
+|`NumerationRulesRuleItemCondition()` |Инициализирует экземпляр класса `NumerationRulesRuleItemCondition`.
 |===
 
 == Свойства
@@ -28,7 +28,7 @@ public class NumerationRulesRuleItemCondition : ObjectBase
 |`FieldName` |Задает или возвращает название поля.
 |`KeyName` |Возвращает отображаемое имя условия.
 |`Operation` |Задает или возвращает название операции, применяемой в условии.
-|`SectionId` |Задает или возвращает идентификатор секции, в которой находится поле FieldName.
+|`SectionId` |Задает или возвращает идентификатор секции, в которой находится поле `FieldName`.
 |`Value` |Задает или возвращает значение поля, проверяемое условием.
 |===
 
