--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/NumerationRulesRule_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/NumerationRulesRule_CL.adoc
@@ -17,7 +17,7 @@ public class NumerationRulesRule : ObjectBase
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`NumerationRulesRule()` |Инициализирует экземпляр класса NumerationRulesRule.
+|`NumerationRulesRule()` |Инициализирует экземпляр класса `NumerationRulesRule`.
 |===
 
 == Свойства
