--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/ReferenceListReference_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/ReferenceListReference_CL.adoc
@@ -20,7 +20,7 @@ public class ReferenceListReference : BaseCardSectionRow
 |`Author` |Задает или возвращает сотрудника, которым добавлена ссылка.
 |`Card` |Задает или возвращает карточку, на которую указывает ссылка.
 |`CardDescription` |Задает или возвращает описание карточки.
-|`CardHardlink` |Задает или возвращает жесткую ссылка на карточку.
+|`CardHardlink` |Задает или возвращает жесткую ссылку на карточку.
 |`CardType` |Задает или возвращает тип карточки.
 |`CreationDate` |Задает или возвращает дату добавления ссылки.
 |`Folder` |Задает или возвращает папку, на которую установлена ссылка.
