--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/CheckSignatureResult_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/CheckSignatureResult_MT.adoc
@@ -32,12 +32,12 @@ certificate:::
 detached:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-Устанавливается значение true, если подпись является отсоединённой
+Устанавливается значение `true`, если подпись является отсоединённой
 
 isHash:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-Устанавливается значение true, если подпись является простой
+Устанавливается значение `true`, если подпись является простой
 
 signatureDate:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[System.DateTime]`
