--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService.AddNewUnit_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService.AddNewUnit_MT.adoc
@@ -25,4 +25,4 @@ parentUnit:::
 
 == Заметки
 
-Если parentUnit не задан, организация будет добавлена в корневой каталог организаций.
+Если `parentUnit` не задан, организация будет добавлена в корневой каталог организаций.
