--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService.FindCompanyByNameOnServer_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService.FindCompanyByNameOnServer_MT.adoc
@@ -30,4 +30,4 @@ unitName:::
 
 == Заметки
 
-Если parentUnit не задан, то будет осуществлен поиск в корневом каталоге подразделений.
+Если `parentUnit` не задан, то будет осуществлен поиск в корневом каталоге подразделений.
