--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IPartnersService_IN.adoc
@@ -98,4 +98,4 @@ public interface IPartnersService
 
 == Заметки
 
-Тип контейнера (организация, либо подразделение) определяется значением свойства StaffUnit.Type.
+Тип контейнера (организация, либо подразделение) определяется значением свойства `StaffUnit.Type`.
