--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IReferenceListService.CreateReferenceFromReference_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IReferenceListService.CreateReferenceFromReference_MT.adoc
@@ -38,4 +38,4 @@ reference:::
 
 == Заметки
 
-Метод создает копию ссылки reference в списке ссылок referenceList.
+Метод создает копию ссылки reference в списке ссылок `referenceList`.
