--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IReferenceListService.GetReferenceDescription_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IReferenceListService.GetReferenceDescription_MT.adoc
@@ -27,9 +27,9 @@ reference:::
 
 Метод возвращает:
 
-* для ссылки на карточку: название типа карточки;
-* для ссылки на папку: название папки;
-* для url-адреса: сформированную HTML-ссылку.
+* Для ссылки на карточку: название типа карточки;
+* Для ссылки на папку: название папки;
+* Для url-адреса: сформированную HTML-ссылку.
 
 == Примеры
 
