--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IRoleModelService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IRoleModelService_IN.adoc
@@ -40,7 +40,7 @@ public interface IRoleModelService
 |`FindKindCommonRoleSettings` |Предоставляет доступ к контейнеру общих ролей.
 |`GetConditionsByCardType(Guid)` |Возвращает коллекцию условий ролевой модели для указанного типа карточки.
 |`GetConditionValueDescription(RoleModelRoleCondition)` |Создает строку описания из заданного условия ролевой модели.
-|`GetDateValueDescription(Object)` |Создает строку описания для объекта содержащего дату (обычная System.DateTime, либо дата ролевой модели -- DocsVision.BackOffice.ObjectModel.RoleModelConditionDayWorkStatus).
+|`GetDateValueDescription(Object)` |Создает строку описания для объекта содержащего дату (обычная `System.DateTime`, либо дата ролевой модели -- `DocsVision.BackOffice.ObjectModel.RoleModelConditionDayWorkStatus)`.
 |`GetDayOfWeekDescription(DayOfWeek)` |Создает стандартную строку описания для дня недели.
 |`GetDayStatusDescription(RoleModelConditionValueDayWorkStatus)` |Создает стандартную строку описания для типа рабочего дня (выходной, рабочий).
 |`GetKindRoleSettings(KindsCardKind)` |Возвращает настройки ролевой модели для вида карточки.
