--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.CreateEmployeeFolder_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.CreateEmployeeFolder_MT.adoc
@@ -28,4 +28,4 @@ employee:::
 
 == Заметки
 
-Обязательным требованием для создания персональной папки пользователя является: наличие корневой папки у организации, в которой числиться сотрудник.
+Обязательным требованием для создания персональной папки пользователя является: наличие корневой папки у организации, в которой числится сотрудник.
