--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetRoleEmployees_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetRoleEmployees_MT.adoc
@@ -29,7 +29,7 @@ role:::
 
 == Примеры
 
-Пример получения списка сотрудников, имеющих роль с идентификатором 00000000-0000-0000-0000-000000000000
+Пример получения списка сотрудников, имеющих роль с идентификатором `00000000-0000-0000-0000-000000000000`
 
 [source,csharp]
 ----
