--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.OpenOrCreateEmployeeCard_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.OpenOrCreateEmployeeCard_MT.adoc
@@ -35,4 +35,4 @@ attachNewCardToEmployee:::
 
 == Заметки
 
-Метод OpenOrCreateEmployeeCard возвращает существующую карточку сотрудника, если она отсутствует, то будет создана новая. При создании новой карточки флаг `createNew` устанавливается в значение *true*. По умолчанию, если создается новая карточка, она не прикрепляется к записи сотрудника -- `StaffEmployee.CardEmployee` остается в null. Чтобы изменить данное поведение, флаг `attachNewCardToEmployee` должен быть выставлен в значение *true*.
+Метод `OpenOrCreateEmployeeCard` возвращает существующую карточку сотрудника, если она отсутствует, то будет создана новая. При создании новой карточки флаг `createNew` устанавливается в значение *true*. По умолчанию, если создается новая карточка, она не прикрепляется к записи сотрудника -- `StaffEmployee.CardEmployee` остается в null. Чтобы изменить данное поведение, флаг `attachNewCardToEmployee` должен быть выставлен в значение *true*.
