--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.SetCurrentEmployee_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.SetCurrentEmployee_MT.adoc
@@ -1,6 +1,6 @@
 = IStaffService.SetCurrentEmployee -- метод (StaffEmployee)
 
-Переопределяет текущего сотрудника, возвращаемого методом GetCurrentEmployee.
+Переопределяет текущего сотрудника, возвращаемого методом `GetCurrentEmployee`.
 
 * *Пространство имён:* `xref:api/DocsVision/BackOffice/ObjectModel/Services/Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -23,7 +23,7 @@ employee:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка будет возвращена, если текущий владелец сессии не входит в группу {dv} Administrators или {dv} Power Users.
+|`http://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка будет возвращена, если текущий владелец сессии не входит в группу _{dv} Administrators_ или _{dv} Power Users_.
 |===
 
 == Примеры
