--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService_IN.adoc
@@ -103,7 +103,7 @@ public interface IStaffService
 |`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetGroupEmployees_MT.adoc[GetGroupEmployees(StaffGroup, Boolean, Boolean)]` |Возвращает сотрудников группы.
 |`GetGroupInheritedViewFields(StaffGroup)` |Возвращает унаследованные от родительской группы отображаемые поля.
 |`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetGroupItems_MT.adoc[GetGroupItems(StaffGroup, Boolean)]` |Возвращает элементы заданной группы.
-|`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetImpersonatedEmployee_MT.adoc[GetImpersonatedEmployee]` |Возвращает сотрудника, являющегося истинным владельцем сессии, независимо от назначения, выполненного методом SetCurrentEmployee.
+|`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetImpersonatedEmployee_MT.adoc[GetImpersonatedEmployee]` |Возвращает сотрудника, являющегося истинным владельцем сессии, независимо от назначения, выполненного методом `SetCurrentEmployee`.
 |`GetInheritedCalendarId(StaffEmployee)` |Возвращает идентификатор унаследованного календаря.
 |`GetInheritedTemplateFolder(StaffUnit)` |Возвращает унаследованную шаблонную папку.
 |`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetRoleEmployees_MT.adoc[GetRoleEmployees(StaffRole)]` |Возвращает список сотрудников с указанной ролью.
@@ -151,22 +151,3 @@ public interface IStaffService
 |`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.TransferEmployee_MT.adoc[TransferEmployee(StaffEmployee, StaffUnit, Boolean)]` |Переносит сотрудника в указанное подразделение.
 |`xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.ValidateUser_MT.adoc[ValidateUser]` |Проверяет вхождение текущего пользователя в доменную группу "Администраторы".
 |===
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-* *xref:api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.SynchronizeWithActiveDirectory_MT.adoc[IStaffService.SynchronizeWithActiveDirectory -- метод (IADSynchronizationSettings, ILongProcessManager)]* +
