--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.FindBranchByBuiltIn_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.FindBranchByBuiltIn_MT.adoc
@@ -38,7 +38,7 @@ state:::
 
 == Примеры
 
-Ниже приведен пример использования метода FindBranchByBuiltIn# для получения перехода из состояния Отложено в Отклонено, для карточки задания вида _На исполнение_
+Ниже приведен пример использования метода `FindBranchByBuiltIn` для получения перехода из состояния Отложено в Отклонено, для карточки задания вида _На исполнение_
 
 [source,csharp]
 ----
