--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.GetKindStateSetting_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.GetKindStateSetting_MT.adoc
@@ -25,7 +25,7 @@ cardKind:::
 
 == Примеры
 
-Далее приведен пример использования метода GetKindStateSetting при получении начального состояния карточки задание вида "На исполнение".
+Далее приведен пример использования метода `GetKindStateSetting` при получении начального состояния карточки задание вида "На исполнение".
 
 [source,csharp]
 ----
