--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.CreateTaskGroup_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.CreateTaskGroup_MT.adoc
@@ -38,7 +38,7 @@ taskGroup:::
 
 == Заметки
 
-Данный метод, в отличие от метода AddTaskGroup, не добавляет соответствующую запись в историю карточки.
+Данный метод, в отличие от метода `AddTaskGroup`, не добавляет соответствующую запись в историю карточки.
 
 == Примеры
 
