--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.CreateTask_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.CreateTask_MT.adoc
@@ -48,11 +48,11 @@ controller:::
 
 == Заметки
 
-В отличии от метода AddTask, метод CreateTask не осуществляет записи события в историю карточки. Кроме этого, данный метод позволяет указать признак наличия контроля для задания дополнительно к тому, что указано в самом задании.
+В отличие от метода `AddTask`, метод `CreateTask` не осуществляет записи события в историю карточки. Кроме этого, данный метод позволяет указать признак наличия контроля для задания дополнительно к тому, что указано в самом задании.
 
 == Примеры
 
-Далее приведен пример использования метода CreateTask при добавлении нового задания с признаком "На контроле" в существующий документ
+Далее приведен пример использования метода `CreateTask` при добавлении нового задания с признаком "На контроле" в существующий документ
 
 [source,csharp]
 ----
