--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.GetTasksTree_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService.GetTasksTree_MT.adoc
@@ -33,7 +33,7 @@ taskList:::
 
 == Примеры
 
-Далее приведен пример получения дерева заданий из списка задания с использованием метода GetTasksTree
+Далее приведен пример получения дерева заданий из списка задания с использованием метода `GetTasksTree`
 
 [source,csharp]
 ----
