--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.AddChildCopyField_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.AddChildCopyField_MT.adoc
@@ -29,7 +29,7 @@ task:::
 
 == Примеры
 
-В приведенном примере демонстрируется использование метода AddChildCopyField при добавлении полей, копируемых в подчиненное задание.
+В приведенном примере демонстрируется использование метода `AddChildCopyField` при добавлении полей, копируемых в подчиненное задание.
 
 [source,csharp]
 ----
