--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.ChangeTask_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.ChangeTask_MT.adoc
@@ -28,4 +28,4 @@ task:::
 
 == Заметки
 
-В историю будет добавлена запись: "Задание ... изменено.".
+В историю будет добавлена запись: "Задание ... изменено".
