--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.CompleteTask_1_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.CompleteTask_1_MT.adoc
@@ -44,4 +44,4 @@ completedUser:::
 
 == Заметки
 
-Данный метод завершает задание с указанием completedUser в качестве сотрудника, завершившего задание. Операция выполняется в контексте владельца сессии, поэтому владелец сессии должен иметь право на завершении данного задания. Для изменения фактического состояния карточки необходимо использовать метод `xref:api/DocsVision/BackOffice/ObjectModel/Services/IStateService.ChangeState_MT.adoc[IStateService.ChangeState]`.
+Данный метод завершает задание с указанием `completedUser` в качестве сотрудника, завершившего задание. Операция выполняется в контексте владельца сессии, поэтому владелец сессии должен иметь право на завершении данного задания. Для изменения фактического состояния карточки необходимо использовать метод `xref:api/DocsVision/BackOffice/ObjectModel/Services/IStateService.ChangeState_MT.adoc[IStateService.ChangeState]`.
