--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.Delegate_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.Delegate_MT.adoc
@@ -60,7 +60,7 @@ comment:::
 
 == Заметки
 
-Сотрудник, переданный в параметре _noticeable_, будет указан в качестве исполнителя задания, делегировавшего задание, если невозможно однозначно определить сотрудника, выполнившего делегирование, что может произойти, к примеру, при делегировании задания сотрудником, являющимся заместителем для нескольких исполнителей задания.
+Сотрудник, переданный в параметре `noticeable`, будет указан в качестве исполнителя задания, делегировавшего задание, если невозможно однозначно определить сотрудника, выполнившего делегирование, что может произойти, к примеру, при делегировании задания сотрудником, являющимся заместителем для нескольких исполнителей задания.
 
 == Примеры
 
