--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.IsUserCurrentPerformer_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.IsUserCurrentPerformer_MT.adoc
@@ -1,6 +1,6 @@
 = ITaskService.IsUserCurrentPerformer -- метод (Task, StaffEmployee)
 
-Определяет входит ли указанный сотрудник в список текущих исполнителей.
+Определяет, входит ли указанный сотрудник в список текущих исполнителей.
 
 * *Пространство имён:* `xref:api/DocsVision/BackOffice/ObjectModel/Services/Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
