--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.StopExecutionRelatedTask_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService.StopExecutionRelatedTask_MT.adoc
@@ -21,7 +21,7 @@ task:::
 force:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-Если true, то при наличие заблокированных заданий операция прекращения исполнения будет продолжена, иначе -- прервана
+Если true, то при наличии заблокированных заданий операция прекращения исполнения будет продолжена, иначе -- прервана
 
 Возвращаемое значение::
 Тип: `xref:api/DocsVision/BackOffice/ObjectModel/Services/Entities/TaskStopExecutionInfo_CL.adoc[TaskStopExecutionInfo]`
