--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IVersionedFileCardService.Upload_1_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IVersionedFileCardService.Upload_1_MT.adoc
@@ -38,5 +38,5 @@ level:::
 [cols=",",options="header"]
 |===
 |Исключение |Условие
-|`https://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка возвращается в случае, если указан несуществующий filePath.
+|`https://msdn.microsoft.com/ru-ru/library/system.invalidoperationexception.aspx[System.InvalidOperationException]` |Ошибка возвращается в случае, если указан несуществующий `filePath`.
 |===
