--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/SignatureList_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/SignatureList_CL.adoc
@@ -32,4 +32,4 @@ public class SignatureList : BaseCard
 
 == Заметки
 
-В классе переопределены обязательные для карточки данной библиотеки свойства Processes и SystemInfo, в связи с отсутствием необходимости в хранении указанной информации.
+В классе переопределены обязательные для карточки данной библиотеки свойства `Processes` и `SystemInfo`, в связи с отсутствием необходимости в хранении указанной информации.
