--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.DisplayName_PR.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.DisplayName_PR.adoc
@@ -19,4 +19,4 @@ public string DisplayName { get; }
 
 == Заметки
 
-Возвращает значение StaffEmployee.DisplayString, а если оно не задано, то вернет StaffEmployee.FullName.
+Возвращает значение `StaffEmployee.DisplayString`, а если оно не задано, то вернет `StaffEmployee.FullName`.
