--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee_CL.adoc
@@ -36,7 +36,7 @@ public class StaffEmployee : ObjectBase
 |`xref:api/DocsVision/BackOffice/ObjectModel/StaffEmployee.DisplayName_PR.adoc[DisplayName]` |Возвращает отображаемое имя сотрудника.
 |`DisplayString` |Задает или возвращает строка отображения данных о сотруднике.
 |`Email` |Задает или возвращает адрес электронной почты.
-|`EmplName` |Возвращает значение свойства StaffEmployee.FullName.
+|`EmplName` |Возвращает значение свойства `StaffEmployee.FullName`.
 |`EndDate` |Задает или возвращает дату окончания отсутствия сотрудника на рабочем месте.
 |`Fax` |Задает или возвращает факс.
 |`FirstName` |Задает или возвращает имя сотрудника.
@@ -78,7 +78,7 @@ public class StaffEmployee : ObjectBase
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`ToString` |Возвращает значение свойства StaffEmployee.DisplayName
+|`ToString` |Возвращает значение свойства `StaffEmployee.DisplayName`
 |===
 
 == Поля
