--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffGroup_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffGroup_CL.adoc
@@ -71,7 +71,7 @@ public class StaffGroup : ObjectBase
 |`AccountSIDProperty` |Представляет свойство "SID учетной записи".
 |`ADsNotSynchronizeProperty` |Представляет свойство "Не синхронизировать с ADs".
 |`CommentsProperty` |Представляет свойство "Комментарии".
-|`DefaultGroupLayoutProperty` |Пре свойство "Default group layout ".
+|`DefaultGroupLayoutProperty` |Представляет свойство "Default group layout ".
 |`DefaultGroupLayoutTimestampProperty` |Представляет свойство "Default layout timestamp".
 |`GroupFoldersProperty` |Представляет свойство "Папки группы".
 |`GroupItemsProperty` |Представляет свойство "Группа".
