--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffPicture_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffPicture_CL.adoc
@@ -41,4 +41,4 @@ public class StaffPicture : ObjectBase
 
 == Заметки
 
-При создании нового экземпляра StaffPicture достаточно установить значение `Image`, а значение `Picture` будет вычислено автоматически.
+При создании нового экземпляра `StaffPicture` достаточно установить значение `Image`, а значение `Picture` будет вычислено автоматически.
