--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Staff_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Staff_CL.adoc
@@ -25,7 +25,7 @@ public class Staff : BaseDictionaryCard
 |`Positions` |Возвращает коллекцию должностей из _Справочника сотрудников_.
 |`Roles` |Возвращает коллекцию ролей из _Справочника сотрудников_.
 |`xref:api/DocsVision/BackOffice/ObjectModel/Staff.Units_PR.adoc[Units]` |Задает или возвращает коллекцию подразделений верхнего уровня иерархии.
-|`UserSettings` |Возвращает пользовательские настроек.
+|`UserSettings` |Возвращает пользовательские настройки.
 |===
 
 == Методы
