--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BaseDictionaryCard_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/BaseDictionaryCard_CL.adoc
@@ -23,4 +23,4 @@ public class BaseDictionaryCard : BaseCard
 
 == Заметки
 
-Справочник представляет собой обычную карточку, но с некоторыми ограничениями, в частности, в классе переопределены свойства Processes и SystemInfo -- возвращают null.
+Справочник представляет собой обычную карточку, но с некоторыми ограничениями. В частности, в классе переопределены свойства `Processes` и `SystemInfo` -- возвращают null.
