--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Document.MainInfo_PR.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Document.MainInfo_PR.adoc
@@ -15,4 +15,4 @@ public DocumentMainInfo MainInfo { get; }
 Значение свойства::
 Тип: `xref:api/DocsVision/BackOffice/ObjectModel/DocumentMainInfo_CL.adoc[DocumentMainInfo]`
 +
-Объектная модель секции "MainInfo"
+Объектная модель секции `MainInfo`
