--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/KindsCardExtendedSettingGroup_CL.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/KindsCardExtendedSettingGroup_CL.adoc
@@ -18,7 +18,7 @@ public class KindsCardExtendedSettingGroup : ObjectBase
 |===
 |Имя |Описание
 |`Groups` |Возвращает коллекцию вложенных групп настроек.
-|`Name` |Задает ил возвращает название группы настроек.
+|`Name` |Задает или возвращает название группы настроек.
 |`ParentGroup` |Возвращает родительскую группу настроек.
 |`Settings` |Возвращает коллекцию настроек расширения.
 |===
