--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IOcspService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IOcspService_IN.adoc
@@ -22,4 +22,4 @@ public interface IOcspService
 
 == Заметки
 
-Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные документе _Система управления документами и бизнес-процессами . Руководство по настройке_.
+Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные в xref:baseobjects:admin:system-settings.adoc#signature-cypher[документации по администрированию] модуля _Базовые объекты_.
