--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetUnitEmployees_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.GetUnitEmployees_MT.adoc
@@ -21,12 +21,12 @@ unit:::
 hierarchy:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-При `true` в итоговый список сотрудников будут включены все подчиненные сотрудники, при false только подчиненные непосредственно `unit`
+При `true` в итоговый список сотрудников будут включены все подчиненные сотрудники, при `false` только подчиненные непосредственно `unit`
 
 selection:::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-При true будут возвращены сотрудники, у которых отсутствует признак "Не показывать при выборе"
+При `true` будут возвращены сотрудники, у которых отсутствует признак "Не показывать при выборе"
 
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/5y536ey6.aspx[System.Collections.Generic.IList]<StaffEmployee>`
