--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.OtherPositionWithSameNameExists_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStaffService.OtherPositionWithSameNameExists_MT.adoc
@@ -26,7 +26,7 @@ name:::
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-true, если найдены должности (кроме position) с названием name
+`true`, если найдены должности (кроме `position`) с названием `name`
 
 == Исключения
 
