--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.GetOrCreatePreferredCardKindSetting_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IStateService.GetOrCreatePreferredCardKindSetting_MT.adoc
@@ -25,4 +25,4 @@ cardKind:::
 
 == Заметки
 
-В том случае, если вид cardKind наследует свои настройки от родительского вида, настройки автомата состояний будут сформированы для него (для родительского вида с собственными настройками).
+В том случае, если вид `cardKind` наследует свои настройки от родительского вида, настройки автомата состояний будут сформированы для него (для родительского вида с собственными настройками).
