--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskListService_IN.adoc
@@ -1,6 +1,6 @@
 = ITaskListService -- интерфейс
 
-Сервис ITaskListService предоставляет методы для работы со списками заданий.
+Сервис `ITaskListService` предоставляет методы для работы со списками заданий.
 
 * *Пространство имён:* `xref:api/DocsVision/BackOffice/ObjectModel/Services/Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
