--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/ITaskService_IN.adoc
@@ -1,6 +1,6 @@
 = ITaskService -- интерфейс
 
-Сервис ITaskService предоставляет методы создания и управления заданиями.
+Сервис `ITaskService` предоставляет методы создания и управления заданиями.
 
 * *Пространство имён:* `xref:api/DocsVision/BackOffice/ObjectModel/Services/Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
