--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IUserProfileCardService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/Services/IUserProfileCardService_IN.adoc
@@ -20,7 +20,7 @@ public interface IUserProfileCardService
 |`GetCertificate(String)` |Получает сертификат пользователя с указанным именем учетной записи.
 |`GetSetting(Int32)` |Получает из профиля пользователя настройку указанного типа.
 |`GetSetting(Int32, Object)` |Получает из профиля пользователя настройку указанного типа, в случае её отсутствия, возвращает значение второго параметра.
-|`GetSetting(Int32, Object, Guid)` |Получает из профиля пользователя настройку указанного типа. Параметр objectId конкретизирует настройку, в случае присутствии нескольких однотипных настроек.
+|`GetSetting(Int32, Object, Guid)` |Получает из профиля пользователя настройку указанного типа. Параметр `objectId` конкретизирует настройку, в случае присутствии нескольких однотипных настроек.
 |`SetCertificate(String, X509Certificate2)` |Задает сертификат указанному пользователю.
 |`SetPersonalFolder(String, FoldersFolder)` |Задает значение личной папки пользователя в карточке.
 |`SetSetting(Int32, Object)` |Сохраняет в профиль настройку заданного типа.
