--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.InactiveStatus_PR.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.InactiveStatus_PR.adoc
@@ -19,4 +19,4 @@ public StaffEmployeeInactiveStatus InactiveStatus { get; set; }
 
 == Заметки
 
-Неактивность сотрудника определяется в соответствии с периодом его отсутствия, ограниченным значением "Период отсутствия" в _Справочнике сотрудников _ или значениями StaffEmployee.StartDate и StaffEmployee.EndDate объектной модели.
+Неактивность сотрудника определяется в соответствии с периодом его отсутствия, ограниченным значением "Период отсутствия" в _Справочнике сотрудников_ или значениями `StaffEmployee.StartDate и StaffEmployee.EndDate` объектной модели.
