--- a/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.Status_PR.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/ObjectModel/StaffEmployee.Status_PR.adoc
@@ -19,4 +19,4 @@ public StaffEmployeeStatus Status { get; set; }
 
 == Заметки
 
-Текущее состояние сотрудника может быть установлено, например, в _Справочнике сотрудников_. Актуализация состояния сотрудника, с проверкой наступления периода отсутствия, производится при вызове метода IStaffService.ActualizeEmployeesState()#. Актуализация состояния выполняется автоматически бизнес-процессом "Процесс актуализации состояния сотрудников".
+Текущее состояние сотрудника может быть установлено, например, в _Справочнике сотрудников_. Актуализация состояния сотрудника, с проверкой наступления периода отсутствия, производится при вызове метода `IStaffService.ActualizeEmployeesState()`. Актуализация состояния выполняется автоматически бизнес-процессом "Процесс актуализации состояния сотрудников".
